test/Fail/NoIrrelevance5.agda
{-# OPTIONS --no-irrelevance #-}

module _ .(A : Set) where
